kubernetes/components/networkpolicies/baseline/allow-egress-https-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-allow-egress-https-internet
spec:
  podSelector: {} # all pods in this namespace
  policyTypes:
  - Egress
  egress:
    - {}
