kubernetes/components/networkpolicies/baseline/allow-observability-all-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-observability-all-ingress
spec:
  endpointSelector: {}  # Applies to all pods
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
