kubernetes/components/networkpolicies/baseline/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
